--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "baseUrl": ".",
     "allowSyntheticDefaultImports": true,
     "paths": {
-      "@/content/*": ["./content/*"],
+      "@/fixtures/*": ["fixtures/*"],
       "@/types/*": ["./types/*"],
       "@/pages/*": ["./page-objects/*"],
     },
