--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
   },
   "homepage": "https://github.com/Dream-Work/playwright-typescript#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.1"
+    "@typescript-eslint/eslint-plugin": "5.49.0",
+    "@typescript-eslint/parser": "5.49.0",
+    "eslint": "8.30.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-cypress": "2.12.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "prettier": "2.8.1"
   },
   "dependencies": {
-    "@playwright/test": "^1.29.2",
-    "dotenv": "^16.0.3",
-    "lariat": "^1.4.1",
-    "typescript": "^4.9.4"
+    "@playwright/test": "1.29.2",
+    "dotenv": "16.0.3",
+    "lariat": "1.4.1",
+    "typescript": "4.9.4"
   }
 }
