--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "project": ["./tsconfig.json"]
+        "project": ["./tsconfig.json", "./package.json"],
+        "extraFileExtensions": [".json"]
     },
     "plugins": [
         "@typescript-eslint",
