add playwright config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
   },
   "include": [
     ".eslintrc.json",
+    "playwright.config.ts",
     "package.json",
     "./tests/**/*",
     "./page-objects/**/*"
