--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
   },
   "homepage": "https://github.com/Dream-Work/playwright-typescript#readme",
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@typescript-eslint/eslint-plugin": "6.12.0",
-    "@typescript-eslint/parser": "6.12.0",
-    "eslint": "8.54.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-prettier": "5.0.1",
-    "prettier": "3.1.0"
+    "@types/node": "20.10.5",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@typescript-eslint/parser": "6.15.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.0",
+    "prettier": "3.1.1"
   },
   "dependencies": {
-    "@playwright/test": "1.40.0",
+    "@playwright/test": "1.40.1",
     "dotenv": "16.3.1",
     "lariat": "2.0.1",
-    "typescript": "5.3.2"
+    "typescript": "5.3.3"
   }
 }
