--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
   },
   "homepage": "https://github.com/Dream-Work/playwright-typescript#readme",
   "devDependencies": {
-    "@types/node": "20.11.20",
+    "@types/node": "20.14.2",
     "@typescript-eslint/eslint-plugin": "7.12.0",
-    "@typescript-eslint/parser": "7.0.2",
-    "eslint": "8.56.0",
+    "@typescript-eslint/parser": "7.12.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
-    "prettier": "3.2.5"
+    "prettier": "3.3.1"
   },
   "dependencies": {
     "@playwright/test": "1.41.2",
     "dotenv": "16.4.5",
     "lariat": "2.0.1",
-    "typescript": "5.3.3"
+    "typescript": "5.4.5",
+    "typescript-eslint": "7.12.0"
   }
 }
