--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,12 +5,18 @@
 
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: 'npm' # See documentation for possible values
+    directory: '/' # Location of package manifests
+    groups:
+      minor-and-patch:
+        applies-to: security-updates
+        update-types:
+          - 'patch'
+          - 'minor'
     schedule:
-      interval: "daily"
-      timezone: "Europe/Berlin"
+      interval: 'daily'
+      timezone: 'Europe/Berlin'
     versioning-strategy: increase
     commit-message:
       # Prefix all commit messages with "npm"
-      prefix: "chore(deps): "
+      prefix: 'chore(deps): '
